Fix icon spacing on iOS

--- a/admin/less/admin.less
+++ b/admin/less/admin.less
@@ -9,9 +9,9 @@
 
 @import url("font-awesome.css");
 
-[class^="icon-"]:before, 
-[class*=" icon-"]:before {
-	margin-right: 1ex;
+[class^="icon-"]::before, 
+[class*=" icon-"]::before {
+	margin-right: 0.5em;
 }
 
 
